sync: align ddd4j (feature/1.0.x) to feature/2.0.x structure
按用户要求，以 ddd4j-v2.0.x 为基础纠正 ddd4j。

## 同步过程

1. **精准同步阶段**：从 ddd4j-v2.0.x 复制 v2.0.x 独有但 ddd4j 没有的 109 个文件，
   覆盖两边都有但内容不同的 426 个文件（以 v2.0.x 为准）。

2. **1.0.x 独有清理**：删除 324 个 v2.0.x 不存在的 1.0.x 独有 .java 文件
   （包括 ddd4j-core/service 包、ddd4j-annotation/DomainService.java 等被 v2.0.x 重构移除的类）。

3. **修复 ddd4j-annotation/pom.xml**：保留 spring-context 依赖
   （1.0.x 的 DomainService 等仍需 Spring 注解）。

4. **恢复误删**：路径 bug 导致 ddd4j-kit 等模块的 v2.0.x 同步过的 java
   被错误删除。从 v2.0.x 重新复制 ddd4j-kit + 12 个模块的 src
   （含 79 个聚合根子模块）。

## 关键差异

- ddd4j-core: 0 java → 153 java（删除 service 包 + 32 个 1.0.x 独有类）
- ddd4j-annotation: 0 → 18 java（删除 DomainService 等 15 个 Spring 元注解文件）
- ddd4j-data/auth/runtime/web/mq/extensions: 79 个子模块 src 从 v2.0.x 同步
- ddd4j-extensions: 保留 1.0.x 独有的 3 个扩展（akka/jackson/pf4j，33 java）

## 保留的 1.0.x 独有特性（v2.0.x 缺失）

- ddd4j-extension-akka/jackson/pf4j：1.0.x 历史扩展，2.0.x 已废弃但保留可用性

## 构建验证

mvn install -Dmaven.test.skip.exec=true -Denforcer.skip=true
BUILD SUCCESS（71 分钟 11 秒，111 个模块全绿）