@@ -1,6 +1,5 @@
 package io.ddd4j.auth.satoken.subject;
 
-import java.util.Collections;
 import cn.dev33.satoken.stp.StpInterface;
 import io.ddd4j.core.auth.AuthPrincipal;
 import io.ddd4j.core.util.SubjectKit;
@@ -17,7 +16,7 @@ public class SaTokenSubjectDataBridge implements StpInterface {
     public List<String> getPermissionList(Object loginId, String loginType) {
         AuthPrincipal principal = SubjectKit.getPrincipalByLoginId(loginId);
         if (Objects.isNull(principal)) {
-            return java.util.Collections.emptyList();
+            return List.of();
         }
         return SubjectKit.getDataProvider().getPermissionList(principal);
     }
@@ -26,7 +25,7 @@ public class SaTokenSubjectDataBridge implements StpInterface {
     public List<String> getRoleList(Object loginId, String loginType) {
         AuthPrincipal principal = SubjectKit.getPrincipalByLoginId(loginId);
         if (Objects.isNull(principal)) {
-            return java.util.Collections.emptyList();
+            return List.of();
         }
         return SubjectKit.getDataProvider().getRoleList(principal);
     }
