@@ -5,9 +5,8 @@ import com.alibaba.excel.read.listener.ReadListener;
 import io.ddd4j.core.exception.BizRuntimeException;
 import lombok.extern.slf4j.Slf4j;
 
-
+import java.io.IOException;
 import java.io.InputStream;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -43,8 +42,7 @@ public final class ExcelImporter {
         } catch (Exception e) {
             throw new BizRuntimeException(500, "excel.import.failed", e);
         }
-        if (listener instanceof ErrorCollectingReadListener) {
-            ErrorCollectingReadListener<T> ec = (ErrorCollectingReadListener<T>) listener;
+        if (listener instanceof ErrorCollectingReadListener<T> ec) {
             return ec.toResult();
         }
         // 非 ErrorCollectingReadListener 场景：返回空 errors（业务 listener 自行处理）
@@ -77,12 +75,15 @@ public final class ExcelImporter {
      * @return 全部数据
      */
     public static <T> List<T> readAll(InputStream in, Class<T> head) {
-        // 注意：调用方负责关闭 InputStream（JDK8 try-with-vars 不可用）
-        try {
-            return EasyExcel.read(in).head(head).sheet().doReadSync();
-        } catch (Exception e) {
-            log.error("excel.import.readall.failed", e);
+        try (in) {
+            try {
+                return EasyExcel.read(in).head(head).sheet().doReadSync();
+            } catch (Exception e) {
+                throw new BizRuntimeException(500, "excel.import.readall.failed", e);
+            }
+        } catch (IOException ex) {
+            log.error("excel.import.readall.failed", ex);
         }
-        return Collections.emptyList();
+        return List.of();
     }
 }
