@@ -7,7 +7,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.Collections;
 
 /**
  * Runtime 对应用 ReadinessContributor 的无框架注册与查询入口。
@@ -20,7 +19,7 @@ public final class RuntimeReadinessRegistry {
     private final List<ReadinessContributor> contributors = new CopyOnWriteArrayList<>();
 
     public RuntimeReadinessRegistry() {
-        this(Collections.emptyList());
+        this(List.of());
     }
 
     public RuntimeReadinessRegistry(Collection<? extends ReadinessContributor> contributors) {
