@@ -22,7 +22,6 @@ import io.ddd4j.core.cqrs.readmodel.ProjectionPosition;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -219,7 +218,7 @@ public abstract class AbstractCqrsRuntimeContractTest {
 
         @Override
         public Set<Class<? extends Command>> supportedCommands() {
-            return Collections.singleton(CmdA.class);
+            return Set.of(CmdA.class);
         }
 
         @Override
@@ -241,7 +240,7 @@ public abstract class AbstractCqrsRuntimeContractTest {
 
         @Override
         public Set<Class<? extends Command>> supportedCommands() {
-            return Collections.singleton(CmdB.class);
+            return Set.of(CmdB.class);
         }
 
         @Override
