@@ -5,8 +5,6 @@ import org.junit.jupiter.api.Test;
 
 import java.time.Duration;
 import java.util.List;
-import java.util.Arrays;
-import java.util.Collections;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -17,7 +15,7 @@ class Ddd4jDropwizardWebConfigurationTest {
     @Test
     void defaults() {
         Ddd4jDropwizardWebConfiguration cfg = new Ddd4jDropwizardWebConfiguration();
-        assertEquals(Arrays.asList("/health", "/healthcheck/**"), cfg.getPublicPaths());
+        assertEquals(List.of("/health", "/healthcheck/**"), cfg.getPublicPaths());
         assertEquals(AuthenticationMode.REQUIRED, cfg.getDefaultAuthenticationMode());
         assertTrue(cfg.isIdempotencyEnabled());
         assertEquals("ddd4j-web-idempotency", cfg.getIdempotencyCacheName());
@@ -28,8 +26,8 @@ class Ddd4jDropwizardWebConfigurationTest {
     @Test
     void setters() {
         Ddd4jDropwizardWebConfiguration cfg = new Ddd4jDropwizardWebConfiguration();
-        cfg.setPublicPaths(Collections.singletonList("/api"));
-        assertEquals(Collections.singletonList("/api"), cfg.getPublicPaths());
+        cfg.setPublicPaths(List.of("/api"));
+        assertEquals(List.of("/api"), cfg.getPublicPaths());
         cfg.setDefaultAuthenticationMode(AuthenticationMode.OPTIONAL);
         assertEquals(AuthenticationMode.OPTIONAL, cfg.getDefaultAuthenticationMode());
         cfg.setIdempotencyCacheName("cache");
