@@ -1,17 +1,3 @@
-/*
- * Copyright (c) 2024-2026 ddd4j project. All rights reserved.
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
 package io.ddd4j.web.micronaut;
 
 import io.ddd4j.web.core.auth.AuthenticationMode;
@@ -23,7 +9,6 @@ import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.Arrays;
 
 /**
  * Micronaut Web 适配配置。
@@ -32,7 +17,7 @@ import java.util.Arrays;
 @ConfigurationProperties("ddd4j.web")
 public class Ddd4jMicronautWebConfiguration {
 
-    private List<String> publicPaths = new ArrayList<>(Arrays.asList(
+    private List<String> publicPaths = new ArrayList<>(List.of(
             "/health", "/health/readiness", "/health/liveness"));
     private AuthenticationMode defaultAuthenticationMode = AuthenticationMode.REQUIRED;
     @Setter
